roles/Addons/templates/registry/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: registry
status:
  phase: Active
