roles/Addons/templates/registry/6.Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: registry
  namespace: registry
spec:
  rules:
  - host: hub.kubernetes.local
    http:
      paths:
      - path: /
        backend:
          serviceName: registry
          servicePort: 5000
